# seed-quickstart-webpack

./: package.json
.github/workflows/: main.yml
crate/: Cargo.toml
crate/src/: lib.rs
crate/src/page/: home.rs  not_found.rs
crate/src/page/partial/: footer.rs  header.rs
