[package]
version = "0.1.0"
name = "webzia"
repository = "https://github.com/Charles-Johnson/seed-quickstart-webpack"
authors = ["Charles Johnson <charlesthomasjohnson0@gmail.com>, Martin Kavík <martin@kavik.cz>"]
description = "Website to demonstrate Zia programming"
categories = ["wasm", "rust", "tailwindcss", "seed", "website"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "^0.2.50" # sync with `wasm-bindgen`

[dependencies]
zia = {git = 'https://github.com/Charles-Johnson/zia_programming'}
wasm-bindgen = "^0.2.50" # sync with `wasm-bindgen-test`
seed = "0.4.2"
fixed-vec-deque = "0.1.8"

[dependencies.web-sys]
version = "^0.3.32"
features = [
  "ScrollToOptions",
  "Navigator",
  "KeyboardEvent",
]

[profile.release]
lto = true
opt-level = 's'
